--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "emoji-picker-react": "^4.12.0",
+    "firebase": "^11.0.2",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
