--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "emoji-picker-react": "^4.12.0",
     "firebase": "^11.0.2",
     "next": "14.2.4",
